[gd_scene load_steps=12 format=3 uid="uid://cr5hyyge47l3w"]

[ext_resource type="Script" path="res://Pausemenu/pausemenu.gd" id="1_4pj2e"]
[ext_resource type="Texture2D" uid="uid://dw83uahxvgqvd" path="res://Assets/Background/Main_menu_background.png" id="2_1axdu"]
[ext_resource type="Texture2D" uid="uid://bhwilfds0dgdj" path="res://Assets/Menu/Menu buttons=Peamenuu1.png" id="3_l8qde"]
[ext_resource type="Texture2D" path="res://Assets/Menu/Menu buttons=Jatka1.png" id="3_yqa5c"]
[ext_resource type="Texture2D" path="res://Assets/Menu/Menu buttons=Seaded1.png" id="4_i1mhu"]
[ext_resource type="Texture2D" path="res://Assets/Menu/Menu buttons=Juhised1.png" id="5_0rgsd"]
[ext_resource type="PackedScene" uid="uid://dlh5o1brjrpdv" path="res://Options/options.tscn" id="7_er2sg"]
[ext_resource type="AudioStream" uid="uid://cn5sa2iwhuwu3" path="res://Audio/button_click.wav" id="7_n06wf"]
[ext_resource type="PackedScene" uid="uid://dgh05vmajtinm" path="res://Instructions/instructions_page.tscn" id="8_5w3u7"]
[ext_resource type="PackedScene" uid="uid://bdbtew7c0vbb4" path="res://ConfirmActionPopup/confirm_action_popup.tscn" id="10_oswgc"]

[sub_resource type="SystemFont" id="SystemFont_klkt6"]
font_names = PackedStringArray("Impact")

[node name="Pause_menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4pj2e")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1axdu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_klkt6")
theme_override_font_sizes/font_size = 64
text = "Prügivägi"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator8" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator9" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Continue_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(496, 104)
layout_mode = 2

[node name="Continue2" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Continue_Button"]
position = Vector2(248, 51)
texture = ExtResource("3_yqa5c")

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(496, 104)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Options_Button"]
position = Vector2(247, 53)
texture = ExtResource("4_i1mhu")

[node name="Separator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Tutorials_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(496, 104)
layout_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Tutorials_Button"]
position = Vector2(247, 52)
texture = ExtResource("5_0rgsd")

[node name="Separator6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Back_To_Main_Menu_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(496, 104)
layout_mode = 2

[node name="Back_To_Main_Menu" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Back_To_Main_Menu_Button"]
position = Vector2(248, 51)
texture = ExtResource("3_l8qde")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_n06wf")

[node name="Options" parent="." instance=ExtResource("7_er2sg")]
visible = false
layout_mode = 1

[node name="InstructionsPage" parent="." instance=ExtResource("8_5w3u7")]
visible = false
layout_mode = 1

[node name="ConfirmActionPopup" parent="." instance=ExtResource("10_oswgc")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Continue_Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Tutorials_Button" to="." method="_on_tutorials_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back_To_Main_Menu_Button" to="." method="_on_continue_button_pressed"]
